# CG-PR3

./: .gitignore  CMakeLists.txt  README.md
src/: cube.cpp  cube.h  light.h  main.cpp  material.h  skybox.cpp  skybox.h
